--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "restaurant-page",
   "version": "1.0.0",
-  "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "file-loader": "^6.2.0",
+    "prettier": "2.8.7",
     "style-loader": "^3.3.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.76.3",
@@ -20,5 +23,15 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KaremKh/restaurant-page.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KaremKh/restaurant-page/issues"
+  },
+  "homepage": "https://github.com/KaremKh/restaurant-page#readme",
+  "description": ""
 }
